# dabih

./: .eslintrc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  dev.config.cjs  docker-compose-dev.yml  docker-compose.yml  ecosystem.config.js  helpers.cjs  package-lock.json  package.json  pm2-dev.yaml  pm2-prod.yaml  pm2.dev.config.cjs  pm2.prod.config.cjs  prod.config.cjs  start.sh  tmp.sh  version.sh
.github/workflows/: build_release.yaml  fuck_windows.yaml  publish-cli-crate.yaml  publish-docker-image-api.yaml  publish-docker-image-client.yaml  publish-docker-images.yaml  publish-docker.yaml  publish-tauri-app.yaml  publish_crate.yaml
api/: .env.dev  .env.smb.test  .env.test  .gitignore  Dockerfile  app.js  config.yaml  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  tmp.html  tmp.js  tsconfig.json  tsconfig.tsbuildinfo  tsoa.json  tsup.config.ts
api/prisma/: .sqlite  .sqlite-journal  schema.prisma
api/src/: app.ts  auth.ts  client.ts  server.js  server.ts
api_old/: .eslintrc  package-lock.json
cli/: Cargo.toml  README.md  build.rs  codegen.rs  generate.sh  min.txt  spec-fixed.json  spec.json
cli/openapi/: Cargo.toml  README.md
cli/openapi/.openapi-generator/: FILES
cli/openapi/docs/: AddDirectoryBody.md  AuthApi.md  Chunk.md  ChunkData.md  CryptoJsonWebKey.md  CryptoPeriodJsonWebKey.md  DabihInfo.md  DabihInfoBranding.md  DabihInfoBrandingAdmin.md  DabihInfoBrandingContact.md  DabihInfoBrandingOrganization.md  DecryptDatasetRequest.md  Directory.md  DownloadApi.md  File.md  FileData.md  FileDecryptionKey.md  FileDownload.md  FileKeys.md  FileUpload.md  FilesystemApi.md  FindUserRequest.md  Healthy200Response.md  Inode.md  InodeMembers.md  InodeMembersParent.md  InodeSearchBody.md  InodeSearchResults.md  InodeTree.md  InodeType.md  Job.md  JobApi.md  JobStatus.md  Key.md  KeyAddBody.md  KeyEnableBody.md  KeyRemoveBody.md  ListResponse.md  Member.md  MemberAddBody.md  (+23 more)
cli/openapi/src/apis/: auth_api.rs  configuration.rs  download_api.rs  filesystem_api.rs  job_api.rs  mod.rs  token_api.rs  upload_api.rs  user_api.rs  util_api.rs
cli/openapi/src/models/: add_directory_body.rs  chunk.rs  chunk_data.rs  crypto_json_web_key.rs  crypto_period_json_web_key.rs  dabih_info.rs  dabih_info_branding.rs  dabih_info_branding_admin.rs  dabih_info_branding_contact.rs  dabih_info_branding_organization.rs  decrypt_dataset_request.rs  directory.rs  error_response.rs  file.rs  file_data.rs  file_decryption_key.rs  file_download.rs  file_keys.rs  file_upload.rs  find_user_request.rs  healthy_200_response.rs  inode.rs  inode_members.rs  inode_members_parent.rs  inode_search_body.rs  inode_search_results.rs  inode_tree.rs  inode_type.rs  job.rs  job_status.rs  key.rs  key_add_body.rs  key_enable_body.rs  key_remove_body.rs  list_response.rs  member.rs  member_add_body.rs  mod.rs  move_inode_body.rs  permission.rs  (+17 more)
cli/src/: _tmp.rs  api.rs  chunked_reader.rs  config.rs  crypto.rs  download.rs  downloader.rs  error.rs  hash.rs  init.rs  lib.rs  log.rs  main.rs  member.rs  private_key.rs  progress.rs  recovery.rs  remove.rs  resolve.rs  sftp.rs  types.rs  upload.rs  uploader.rs  uploader_.rs
cli/src/command/: _tmp.rs  cat.rs  download.rs  hash.rs  list.rs  member.rs  mod.rs  status.rs  upload.rs
cli/src/crypto/: aes.rs  aes_key.rs  mod.rs  private_key.rs  rsa.rs
cli/src/fs/: chunk.rs  chunked_reader.rs  inode_writer.rs  mod.rs
cli/tmp/: Cargo.toml
client/: .eslintrc  .eslintrc.json  .gitignore  3  Dockerfile  colors.py  next.config.mjs  old_eslintrc  package-lock.json  package.json  refactor.py  tailwind.config.js  test  test.pub  test_key.pem.pub  tsconfig.json
client/app/: BrowserSupport.tsx  Header.tsx  layout.tsx  page.tsx  providers.tsx  session.tsx
client/components/: Contact.js  Contact.jsx  DataPolicy.js  DataPolicy.tsx  Footer.js  Header.js  Layout.js  Layout.jsx  Privacy.js  Privacy.jsx  index.js  index.tsx
client/lib/: api.ts  auth.js  crypto-util.js  crypto.js  index.js  storage.js  storage.ts  ur-auth.js
client/mdx/: Code.js  Headers.js  Link.js  Lists.js  Table.js  index.js
client/pages/: _app.js  _index.js  account.js  admin.js  contact.js  data_policy.js  index.js  key.js  logout.js  manage.js  privacy.js  profile.js  session.js  upload.js
client/styles/: globals.css
client/types/: next-auth.d.ts
example/: README.md  docker-compose.yaml
example/kubernetes/: config.yaml  deployment-api.yaml  deployment-client.yaml  deployment-redis.yaml  ingress.yaml  pvc-api.yaml  service-api.yaml  service-client.yaml  service-redis.yaml
example/podman/: Caddyfile  README.md  config.yaml  docker-compose.yaml
next/: .env  .eslintrc.json  .gitignore  Dockerfile  eslint.config.js  jest.config.ts  mdx-components.tsx  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
next/app/: Footer.tsx  Header.tsx  NavItem.tsx  globals.css  layout.tsx  providers.tsx  session.tsx
next/lib/: api.ts  config.ts  storage.ts  transfer.ts  transferWorker.ts
next/types/: next-auth.d.ts
paper/: paper.bib  paper.crossref  paper.md
src/: server.js
src/api/: router.js
src/auth/: fetchUser.js  parseRequest.js
src/crypto/: asymmetric.js  asymmetric.test.js  index.js  sha256.js  util.js
src/database/: index.js  init.js  tables.js
src/ephemeral/: index.js  init.js  memcached.js  memory.test.js  redis.js
src/middleware/: auth.js  logEvents.js  logRequests.js  requireScopes.js  transaction.js
tauri/: .eslintrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: api.rs  config.rs  error.rs  main.rs  progress.rs  upload.rs
vite/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+995 files in other folders)
