[package]
name = "dabih"
description = "Command Line Interface for dabih"
authors = ["Michael Huttner<michael@mhuttner.com>"]
version = "2.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/spang-lab/dabih"
repository = "https://github.com/spang-lab/dabih"
keywords = ["cli", "dabih"]
categories = ["command-line-utilities"]

[features]
default = []

[lib]
name = "dabih"
path = "src/lib.rs"

[[bin]]
name = "dabih"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.21", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.10", features = ["stream", "json"] }
openapi = { version = "0.1.0", path = "openapi" }
rsa = "0.9.8"
sha2 = "0.10.9"
aes = "0.8.4"
cbc = "0.1.2"
thiserror = "2.0.12"
base64ct = "1.7.3"


