[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "http-all", "path-all", "window-all", "dialog-open", "fs-all"] }
anyhow = "1.0.72"
base64 = "0.21.2"
sha256 = "1.4.0"
flate2 = "1.0.27"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
zip = "0.6.6"
thiserror = "1.0.48"
glob = "0.3.1"
sha2 = "0.10.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
